worked on navbar a bit. responsive and aligns correctly when page gets smaller

--- a/style.css
+++ b/style.css
@@ -12,27 +12,32 @@
     height: 100vh;
 }
 
-#navbar {
-    background-color: #FFFFFF;
-    /* margin-right: -1.62%;
-    margin-left: -1.62%; */
-    margin-left: -2.5%;
-    margin-right: -2.5%;
-    margin-top: -2.5%;
-    background-color: gray;
-}
-
 #eureka-logo {
-    margin-left: 8.5%;
-    padding-top: 7%;
+    /* margin-left: 8.5%; */
+    margin-left: 10.7%;
+    /* padding-top: 7%; */
+    margin-top: 3.4%;
     font-size: 4vw;
     color: #3D67FF;
-    display: inline;
+    /* display: inline; */
+    float: left;
     font-weight: bold;
 }
 
+#navbar {
+    background-color: #FFFFFF;
+    /* background-color: gray; */
+    /* margin-right: -1.62%;
+    margin-left: -1.62%; */
+    /* height: 18%; */
+    margin-left: -2.5%;
+    margin-right: -2.5%;
+    margin-top: -2.5%;
+    padding-bottom: 1.5%;
+}
+
 #navbar-item-1{
-    margin-left: 11%;
+    margin-left: 15.75%;
 }
 
 .navbar-item {
@@ -42,7 +47,7 @@
 }
 
 #first-app-store-logo {
-    padding-top: 2%;
+    padding-top: 4%;
 }
 
 .apple-store-logo { 
